--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -5,22 +5,22 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>catalog</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href=''>
+    <link rel='stylesheet' type='text/css' media='screen' href='catalog.css'>
     <script src=''></script>
 </head>
 <body>
-    <a href="index/index.html">Главная</a>
-    <a href="catalog/catalog.html">каталог</a>
-    <a href="index/alt.html">контакты</a>
-    <h1>каталог</h1>
-    <img src="https://img.freepik.com/free-photo/high-angle-delicious-burger-with-flag_23-2149897343.jpg?w=740&t=st=1701426644~exp=1701427244~hmac=3a7fc3397b0d258215ed8390868e79092d8f6e1575f99af91df6075b9d3268de" alt="img/BURGER.jpg"></img>
-    <h3>Гамбургер Американский</h3>
+    <a class="links" href="index/index.html">Главная</a>
+    <a class="links" href="catalog/catalog.html">каталог</a>
+    <a class="links" href="index/alt.html">контакты</a>
+    <h1 class="maintext">каталог</h1>
+    <img class="food" src="https://img.freepik.com/free-photo/high-angle-delicious-burger-with-flag_23-2149897343.jpg?w=740&t=st=1701426644~exp=1701427244~hmac=3a7fc3397b0d258215ed8390868e79092d8f6e1575f99af91df6075b9d3268de" alt="img/BURGER.jpg"></img>
+    <h2 class="half-head">Гамбургер Американский</h2>
+    <p class="sampletext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates laboriosam est aspernatur, magni ex ab. Molestiae animi ratione laborum reiciendis aliquam repellat voluptate quos maxime, corrupti adipisci, enim consequatur incidunt.</p>
+    <img class="food" src="https://img.freepik.com/free-photo/fresh-croissant-bakery-wooden-plate-bakery-homemade_640221-609.jpg?w=740&t=st=1701427529~exp=1701428129~hmac=87edc452c10243f942d46e1d0a39b7c186ebb5e77586175bd9d74423d90d8aae" alt="img/kryasan.jpg"></img>
+    <h2 class="half-head">Круасан Французский</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates laboriosam est aspernatur, magni ex ab. Molestiae animi ratione laborum reiciendis aliquam repellat voluptate quos maxime, corrupti adipisci, enim consequatur incidunt.</p>
-    <img src="https://img.freepik.com/free-photo/fresh-croissant-bakery-wooden-plate-bakery-homemade_640221-609.jpg?w=740&t=st=1701427529~exp=1701428129~hmac=87edc452c10243f942d46e1d0a39b7c186ebb5e77586175bd9d74423d90d8aae" alt="img/kryasan.jpg"></img>
-    <h3>Круасан Французский</h3>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates laboriosam est aspernatur, magni ex ab. Molestiae animi ratione laborum reiciendis aliquam repellat voluptate quos maxime, corrupti adipisci, enim consequatur incidunt.</p>
-    <img src="https://img.freepik.com/free-photo/seafood-cleaning-process-kitchen_23-2150171475.jpg?w=740&t=st=1701426955~exp=1701427555~hmac=326cb48ecbba7a9314893b1c91d2192fabb60329b1e87671cc73be110a79cde7" alt="img/Fish.jpg"></img>
-    <h3>Рыба Морская</h3>
+    <img class="food" src="https://img.freepik.com/free-photo/seafood-cleaning-process-kitchen_23-2150171475.jpg?w=740&t=st=1701426955~exp=1701427555~hmac=326cb48ecbba7a9314893b1c91d2192fabb60329b1e87671cc73be110a79cde7" alt="img/Fish.jpg"></img>
+    <h2 class="half-head">Рыба Морская</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates laboriosam est aspernatur, magni ex ab. Molestiae animi ratione laborum reiciendis aliquam repellat voluptate quos maxime, corrupti adipisci, enim consequatur incidunt.</p>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum ducimus perferendis provident,
