--- a/index/alt.html
+++ b/index/alt.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>второй ДОКУМЕНТ</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='alt.css'>
+    <script src=''></script>
 </head>
 <body>
-    <a href="index.html"> главная</a>
-    <a href="catalog/catalog.html"> каталог</a>
+    <a class="links" href="index.html"> главная</a>
+    <a class="links" href="catalog/catalog.html"> каталог</a>
 </body>
 </html>
