--- a/index/index.html
+++ b/index/index.html
@@ -5,18 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width , initial-scale=1.0">
         <title>ПЕРВЫЙ ДОКУМЕНТ</title>
+        <link rel='stylesheet' type='text/css' media='screen' href='index.css'>
+        <script src=''></script>
     </head>
     <body>
-        <h1>Главная странница</h1>
-        <h2>Добро пожаловать на САЙТ</h2>
-        <a href="index.html">Главная</a>
-        <a href="catalog/catalog.html">каталог</a>
-        <a href="alt.html">контакты</a>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia obcaecati iste quas molestias corrupti,
+        <h1 class="maintext">Главная странница</h1>
+        <h2 class="half-head">Добро пожаловать на САЙТ</h2>
+        <a class="links" href="index.html">Главная</a>
+        <a class="links" href="catalog/catalog.html">каталог</a>
+        <a class="links" href="alt.html">контакты</a>
+        <p class="sampletext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia obcaecati iste quas molestias corrupti,
         veritatis totam quos eum quis eligendi provident vero a error est nostrum corporis voluptatibus architecto quasi?</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia obcaecati iste quas molestias corrupti,
+        <p class="sampletext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia obcaecati iste quas molestias corrupti,
         veritatis totam quos eum quis eligendi provident vero a error est nostrum corporis voluptatibus architecto quasi?</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia obcaecati iste quas molestias corrupti,
+        <p class="sampletext">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia obcaecati iste quas molestias corrupti,
         veritatis totam quos eum quis eligendi provident vero a error est nostrum corporis voluptatibus architecto quasi?</p>
     </body>
 </Html>
