--- a/task6/index.html
+++ b/task6/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>tablet page</title>
-    <link rel="stylesheet" href="index.css" /> 
+    <link rel="stylesheet" href="index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1"> 
 </head>
 <body>
 
@@ -15,7 +16,7 @@
             <img src="img/Buttons.svg" class="buttons">
         </div>
         <div class="background">
-            <img src="img/main_model.png">
+            <img class="main_model" src="img/main_model.png">
             <div class="rectangle">
             </div>
             
@@ -66,7 +67,7 @@
                 </div> 
             </div>       
             <div class="thing">
-                <img src="img/woman2.png">
+                <img class="woman2" src="img/woman2.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
