--- a/catalog2/catalog2.html
+++ b/catalog2/catalog2.html
@@ -111,7 +111,7 @@
             
             
             <div class="thing">
-                <img src="img/man1.jpg">
+                <img class="thing-img" src="img/man1.jpg">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -122,7 +122,7 @@
                 </div> 
             </div>       
             <div class="thing">
-                <img class="woman2" src="img/woman2.png">
+                <img class="thing-img" src="img/woman2.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -133,7 +133,7 @@
                 </div>
             </div> 
             <div class="thing">
-                <img src="img/man3.png">
+                <img class="thing-img" src="img/man3.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -144,7 +144,7 @@
                 </div>
             </div>
             <div class="thing">
-                <img src="img/man4.png">
+                <img class="thing-img" src="img/man4.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -155,7 +155,7 @@
                 </div> 
             </div>
             <div class="thing">
-                <img src="img/woman5.png">
+                <img class="thing-img" src="img/woman5.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -166,7 +166,7 @@
                 </div>    
             </div>     
             <div class="thing">
-                <img src="img/woman6.png">
+                <img class="thing-img" src="img/woman6.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="thing">
-                    <img src="img/man7.png">
+                    <img class="thing-img" src="img/man7.png">
                     <div class="title_and_price">
                         <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                         <p class="description">Known for her sculptural 
@@ -187,8 +187,19 @@
                         <p class="price">$52.00</p>
                         </div>
                     </div>
-                    <div class="thing">
-                        <img src="img/man8.png">
+                <div class="thing">
+                    <img class="thing-img" src="img/man8.png">
+                    <div class="title_and_price">
+                        <h3 class="title3">ELLERY X M'O CAPSULE</h3>
+                        <p class="description">Known for her sculptural 
+                            takes on traditional tailoring, Australian 
+                            arbiter of cool Kym Ellery teams 
+                            up with Moda Operandi.</p> 
+                        <p class="price">$52.00</p>
+                        </div>
+                    </div>
+                        <div class="thing">
+                        <img class="thing-img" src="img/man9.png">
                         <div class="title_and_price">
                             <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                             <p class="description">Known for her sculptural 
@@ -198,17 +209,6 @@
                             <p class="price">$52.00</p>
                             </div>
                         </div>
-                        <div class="thing">
-                            <img src="img/man9.png">
-                            <div class="title_and_price">
-                                <h3 class="title3">ELLERY X M'O CAPSULE</h3>
-                                <p class="description">Known for her sculptural 
-                                    takes on traditional tailoring, Australian 
-                                    arbiter of cool Kym Ellery teams 
-                                    up with Moda Operandi.</p> 
-                                <p class="price">$52.00</p>
-                                </div>
-                            </div>
             </div>
         <footer class="footer">
             <div class="pros">
