--- a/task6/index.html
+++ b/task6/index.html
@@ -69,7 +69,7 @@
         <div class="products">
             
             <div class="thing">
-                <img src="img/man1.jpg">
+                <img class="thing-img" src="img/man1.jpg">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -91,7 +91,7 @@
                 </div>
             </div> 
             <div class="thing">
-                <img src="img/man3.png">
+                <img class="thing-img" src="img/man3.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="thing">
-                <img src="img/man4.png">
+                <img class="thing-img" src="img/man4.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -113,7 +113,7 @@
                 </div> 
             </div>
             <div class="thing">
-                <img src="img/woman5.png">
+                <img class="thing-img" src="img/woman5.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
@@ -124,7 +124,7 @@
                 </div>    
             </div>     
             <div class="thing">
-                <img src="img/woman6.png">
+                <img class="thing-img" src="img/woman6.png">
                 <div class="title_and_price">
                     <h3 class="title3">ELLERY X M'O CAPSULE</h3>
                     <p class="description">Known for her sculptural 
