--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -37,7 +37,7 @@
                 <p class="items2"> HOME / MEN / <span>NEW ARRIVALS</span></p>
         </div>
         <div class="background">
-            <img src="img/womanmodel.png">
+            <img class="background-img" src="img/womanmodel.png">
         </div>
         <div class="womanColletion">
             <p class="collectionName">WOMEN COLLECTION</p>
