--- a/js/index.html
+++ b/js/index.html
@@ -6,88 +6,50 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="#" class="card-link">Card link</a>
-<a href="#" class="card-link">Another link</a>
+    <p class="dropdown">Привет :)</p>
+    <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+    </button>
+    <div class="menu dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+    </div>
+    </div>
+    
+    <script>
+        "use strict";
+// []()
+// []()
+// 1. Ко всем элементам, имеющим класс "dropdown-item" добавить еще один класс "super-dropdown", необходимо использовать методы forEach и querySelectorAll и свойство classList у элементов.
+// []()
+document.querySelectorAll(".dropdown-item").forEach(element => element.classList.add("super-dropdown"))
 
-<div class="card" style="width: 18rem;">
-<div class="card-body">
-<h5 class="card-title" data-number="100">Card title</h5>
-<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-<p class="card-text" data-number="50">
-Some quick example text to build on the card title and make up the bulk of the card's
-content.
-</p>
-<a href="#" id="super_link" class="card-link">Card link</a>
-<a href="#" class="card-link" data-number="50">Another link</a>
-</div>
-</div>
+// 2. У элемента с классом btn необходимо убрать класс "btn-secondary", если он присутствует у этого элемента, либо добавить, если такого класса у элемента не было.
+// []()
 
-<script>
-"use strict";
+document.querySelector('.btn').classList.toggle('btn-secondary');
+// 3. Необходимо удалить класс "dropdown-menu" у элемента, у которого присутствует класс "menu".
+// []()
 
+document.querySelector('.btn').classList.remove('dropdown-menu')
+// 4. Используя метод insertAdjacentHTML добавьте после div'a с классом "dropdown" следующую разметку:
+// `<a href="#">link</a>`
+// []()
 
+document.querySelector('div.dropdown').insertAdjacentHTML("afterend",'<a href="#">link</a>');
+// 5. У элемента с id "dropdownMenuButton" замените id на "superDropdown".
+// []()
 
+document.getElementById('dropdownMenuButton').id = 'superDropdown';
+// 6. Добавьте атрибут data-dd со значением 3 элементу у которого существует атрибут "aria-labelledby" равный "dropdownMenuButton" используя dataset.
+// []()
 
-/*
-1. Найти по id, используя getElementById, элемент с id равным "super_link" и
-вывести этот элемент в консоль.
-    */
+document.querySelector('[aria-labelledby="dropdownMenuButton"]').dataset.dd = "3";
+// 7. Удалите атрибут type у элемента с классом "dropdown-toggle".
 
-let findSuperLink = document.getElementById("super_link");
-console.log(findSuperLink)
-
-/*
-2. Внутри всех элементов на странице, которые имеют класс "card-link",
-поменяйте текст внутри элемента на "ссылка".
-    */
-
-document.querySelectorAll("card-link").textContent = "ссылка";
-
-/*
-3. Найти все элементы на странице с классом "card-link", которые лежат в
-элементе с классом "card-body" и вывести полученную коллекцию в консоль.
-    */
-
-    const elems = document.querySelectorAll('.card-body .card-link');
-console.log(elems);
-
-/*
-4. Найти первый попавшийся элемент на странице у которого есть атрибут
-data-number со значением 50 и вывести его в консоль.
-    */
-
-const element = document.querySelector('[data-number="50"]');
-console.log(element);
-
-/*
-5. Выведите содержимое тега title в консоль.
-    */
-
-console.log(document.title);
-
-/*
-6. Получите элемент с классом "card-title" и выведите его родительский узел
-в консоль.
-    */
-
-const pElem = document.querySelector('.card-title').parentNode;
-console.log(pElem);
-
-/*
-7. Создайте тег `p`, запишите внутри него текст "Привет" и добавьте созданный
-тег в начало элемента, который имеет класс "card".
-    */
-
-const pTag = document.createElement('p');
-pTag.textContent = 'Привет';
-document.querySelector('.card').prepend(pTag);
-
-/*
-8. Удалите тег h6 на странице.
-    */
-
-document.querySelector('h6').remove();
-
+document.querySelectorAll(".dropdown-toggle").removeAttribute('type')
 </script>
 </body>
 </html></html>
